# gibran

./: .gitignore  HANDOFF.md  LINKEDIN_POST.md  PHASE_4_UI_HANDOFF.md  README.md  ROADMAP.md  STATUS.md  conftest.py  pyproject.toml
docs/: DEFERRED_FOLLOWUPS.md  DEMO_SCRIPT.md  UI_DEPLOYMENT.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ErrorBoundary.tsx  IdentitySetup.test.tsx  IdentitySetup.tsx
frontend/src/views/AuditLog/: AuditLog.tsx
frontend/src/views/CatalogBrowser/: CatalogBrowser.tsx
frontend/src/views/PolicyVisualizer/: PolicyVisualizer.tsx
frontend/src/views/QueryWorkbench/: ExamplesPanel.tsx  QueryWorkbench.test.tsx  QueryWorkbench.tsx  ResultTable.tsx
frontend/src/views/SourceHealth/: SourceHealth.tsx
migrations/: 0001_metadata.sql  0002_governance.sql  0003_observability.sql  0004_source_health.sql  0005_metric_primitives.sql  0006_metric_config.sql  0007_time_bound_policies.sql  0008_example_values.sql  0009_tier4_governance.sql  0010_table_versions.sql  0011_mat_state.sql
migrations/postgres/: 0001_metadata.sql  0002_governance.sql  0003_observability.sql  0004_source_health.sql  0005_metric_primitives.sql  0006_metric_config.sql  0007_time_bound_policies.sql  0008_example_values.sql  0009_tier4_governance.sql  0010_table_versions.sql  0011_mat_state.sql  README.md
prompts/: architect_layer.md
src/gibran/: __init__.py  _source_dispatch.py
src/gibran/catalog/: __init__.py
src/gibran/cli/: __init__.py  main.py
src/gibran/dsl/: __init__.py  compile.py  dialect_emit.py  errors.py  plan_cache.py  run.py  shape_primitives.py  types.py  validate.py
src/gibran/execution/: __init__.py  dialect.py  engine.py  result_cache.py  sql.py
src/gibran/execution/engines/: __init__.py  bigquery.py  duckdb.py  postgres.py  snowflake.py
src/gibran/governance/: __init__.py  ast.py  default.py  identity.py  rate_limit.py  redaction.py  types.py
src/gibran/nl/: __init__.py  patterns.py  runner.py  synonyms.py
src/gibran/observability/: __init__.py  access_anomaly.py  default.py  runner.py  types.py
src/gibran/perf/: __init__.py
src/gibran/semantic/: __init__.py
src/gibran/sync/: __init__.py  applier.py  approval.py  drift.py  example_values.py  loader.py  migrations.py  yaml_schema.py
src/gibran/ui/: __init__.py  auth.py  models.py  server.py
src/gibran/ui/endpoints/: __init__.py  admin.py  ask.py  catalog.py  examples.py  health.py  log.py  policy.py  query.py
src/rumi/: __init__.py  _source_dispatch.py  _sql.py
src/rumi/catalog/: __init__.py
src/rumi/cli/: __init__.py  main.py
src/rumi/dsl/: __init__.py  compile.py  run.py  types.py  validate.py
src/rumi/execution/: __init__.py  sql.py
src/rumi/governance/: __init__.py  ast.py  default.py  identity.py  redaction.py  types.py
src/rumi/observability/: __init__.py  default.py  runner.py  types.py
src/rumi/perf/: __init__.py
src/rumi/sync/: __init__.py  applier.py  loader.py  migrations.py  yaml_schema.py
tests/: test_aggregate_primitives.py  test_ast_compile.py  test_ast_intent.py  test_ast_validation.py  test_benchmarks_smoke.py  test_bigquery_engine.py  test_bigquery_engine_integration.py  test_cli_introspection.py  test_cte_infra.py  test_dialect_emit.py  test_dialect_scaffold.py  test_drift.py  test_dsl.py  test_example_values.py  test_execution_engine.py  test_execution_sql.py  test_governance.py  test_imports.py  test_init_engine.py  test_init_sample.py  test_jwt_resolver.py  test_migrations.py  test_migrations_engine.py  test_nl_patterns.py  test_observability.py  test_observability_runner.py  test_perf_caches.py  test_period_over_period.py  test_postgres_engine.py  test_postgres_engine_integration.py  test_redaction.py  test_shape_primitive_registry.py  test_shape_primitives.py  test_snowflake_engine.py  test_snowflake_engine_integration.py  test_source_dispatch.py  test_sync.py  test_tier4_governance.py  test_ui_endpoints.py
tests/benchmarks/: README.md  bench.py
tests/fixtures/: gibran.yaml  rumi.yaml
tools/: make_linkedin_images.py  postgres_e2e_smoke.py
