[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gibran"
version = "0.0.2"
description = "Gibran: governed metric layer + non-LLM NL-to-SQL over DuckDB. 23 metric primitives (incl. cohort_retention, funnel, multi_stage_filter); identity-aware row + column governance; audit-log redaction; pattern-template NL with structural no-hallucination guarantee."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Adam Ezzat" }]
keywords = [
    "analytics",
    "metric-layer",
    "semantic-layer",
    "governance",
    "duckdb",
    "sql",
    "dsl",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.0",
    "sqlglot>=23",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/AdamEzzat1/gibran"
Repository = "https://github.com/AdamEzzat1/gibran"
Issues = "https://github.com/AdamEzzat1/gibran/issues"

[project.scripts]
gibran = "gibran.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gibran"]
