[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gibran"
version = "0.1.1"
description = "Gibran: governed metric layer + non-LLM NL-to-SQL over DuckDB (Postgres/Snowflake/BigQuery via sqlglot). 25 metric primitives, 26 NL patterns, identity-aware row+column governance, audit-log redaction, optional local HTTP UI. Structural no-hallucination guarantee (pattern templates, never an LLM)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Adam Ezzat" }]
keywords = [
    "analytics",
    "metric-layer",
    "semantic-layer",
    "governance",
    "duckdb",
    "sql",
    "dsl",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.0",
    "sqlglot>=23",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Phase 5A.2: optional PostgresEngine. Install via `pip install gibran[postgres]`.
# Kept out of the default install so headless / DuckDB-only deployments
# don't pull psycopg's binary wheel.
postgres = ["psycopg[binary]>=3.1"]
# Phase 5A.3: optional SnowflakeEngine. Install via `pip install gibran[snowflake]`.
# Snowflake adapter code is in-tree; running against a real Snowflake account
# requires a paid Snowflake subscription. See tests/test_snowflake_engine_integration.py
# for the always-skip-without-credentials integration test stub.
snowflake = ["snowflake-connector-python>=3.0"]
# Phase 5A.4: optional BigQueryEngine. Install via `pip install gibran[bigquery]`.
# BigQuery adapter code is in-tree; running against a real BigQuery project
# requires a GCP project with billing enabled. See tests/test_bigquery_engine_integration.py
# for the always-skip-without-credentials integration test stub.
bigquery = ["google-cloud-bigquery>=3.0"]
# Phase 4A: optional UI HTTP server. Install via `pip install gibran[ui]`.
# Headless / CLI-only deployments don't pull FastAPI / uvicorn.
ui = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.urls]
Homepage = "https://github.com/AdamEzzat1/gibran"
Repository = "https://github.com/AdamEzzat1/gibran"
Issues = "https://github.com/AdamEzzat1/gibran/issues"

[project.scripts]
gibran = "gibran.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gibran"]
# Phase 4B: pack the React build output into the wheel so installs via
# `pip install gibran[ui]` get the SPA without needing a Node toolchain.
# The frontend/ directory is a separate npm project; `npm run build`
# emits to src/gibran/ui/static/, which Hatch's package globbing picks
# up automatically (no force-include needed since it lives under the
# gibran package). If the build hasn't run, the directory is empty
# and the server falls back to a JSON placeholder.
artifacts = ["src/gibran/ui/static/**"]

# v0.1.1 fix: ship the migrations alongside the gibran package so
# `gibran init` works from a fresh `pip install gibran` (no source
# checkout required). Force-include copies `migrations/` (which lives
# at the repo root for editable-install convenience) into the wheel
# at `gibran/migrations/`. The CLI's `_migrations_dir()` resolver
# prefers the in-package location and falls back to the project root
# for editable installs.
[tool.hatch.build.targets.wheel.force-include]
"migrations" = "gibran/migrations"

[tool.hatch.build.targets.sdist]
# Explicit allow-list for the sdist. Without this, Hatch ships the
# entire working tree -- including frontend/node_modules (8000+ files),
# .git, .claude, gibran.duckdb, build/ artifacts, etc.
include = [
    "src/gibran/**",
    "migrations/**",
    "tests/**",
    "tools/**",
    "docs/**",
    "frontend/src/**",
    "frontend/package.json",
    "frontend/vite.config.ts",
    "frontend/vitest.setup.ts",
    "frontend/tsconfig.json",
    "frontend/index.html",
    "frontend/README.md",
    "README.md",
    "ROADMAP.md",
    "LICENSE",
    "pyproject.toml",
    "conftest.py",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    "**/.git",
    "**/.claude",
    "**/*.duckdb",
    "**/*.tsbuildinfo",
    "**/dist",
    "**/build",
]
